--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,5 +4,5 @@ compatibility_date = "2022-05-03"
 
 [vars]
 CORS_ALLOW_ORIGIN = "https://app.goosefx.io,https://app.staging.goosefx.io,http://localhost:3000,https://vesting.goosefx.io,https://nestquest.io"
-RPC_URL = ""
+RPC_URL = "https://api.mainnet-beta.solana.com"
 LOGGING_URL = ""
