--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"start-stackblitz": "WRANGLER_SEND_METRICS=false wrangler dev src/index.ts --local"
 	},
 	"devDependencies": {
-		"@cloudflare/workers-types": "^3.0.0",
+		"@cloudflare/workers-types": "^4.20241106.0",
 		"vitest": "^0.24.5",
-		"wrangler": "^2.1.14"
+		"wrangler": "^3.90.0"
 	}
 }
